# OAREPL

./: .csproj  CMakeLists.txt  Dockerfile  README.md  package.json  remunerator.man  requirements.txt
.github/workflows/: ci.yml
readme/: GitHubActions.man  github-actions.man
src/: sourcecode
tests/: styliferous
